<resources>
    <string name="app_name">Lab2_DigitalIdCard</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="person_age">Age</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="current_id">Current Id</string>
    <string name="school_name">School Name</string>
    <string name="gpa">GPA</string>
    <string name="gre">GRE</string>

    <string name="yes">Yes</string>
    <string name="quit_app_notification">Do you want to leave the app?</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_card">Card</string>
    <string name="menu_map">Map</string>
    <string name="menu_university">Universities</string>
    <string name="university_list">Universities</string>
    <string name="eva">Student ratings and comments provide one source of data for review and promotion committees: The student perspective at a particular moment in time, at the end of the course. While students don’t know at this point how they’ll use what they learned or how they’ll view the course after they’ve graduated, course evaluation data are still useful, because students are experts in evaluating their experience and perceptions as learners. It is important also to provide a means for students to have a voice and for faculty to remain accountable to their students.</string>


</resources>
