<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab2_digitalidcard.ui.card.CardFragment"
        android:label="@string/menu_card"
        tools:layout="@layout/activity_card" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lab2_digitalidcard.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lab2_digitalidcard.ui.university.UniversityListFragment"
        android:label="@string/university_list"
        tools:layout="@layout/fragment_university_search" />

 <!--   <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.navigationdrawer.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navigationdrawer.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.navigationdrawer.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />-->
</navigation>